--- a/RestaurantRater/RestaurantRater.csproj
+++ b/RestaurantRater/RestaurantRater.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\RestaurantController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -171,7 +172,12 @@
     <Compile Include="Migrations\202108020456507_InitialMigration.designer.cs">
       <DependentUpon>202108020456507_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202108030039525_AddedRatings.cs" />
+    <Compile Include="Migrations\202108030039525_AddedRatings.designer.cs">
+      <DependentUpon>202108030039525_AddedRatings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Rating.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Models\RestaurantDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -262,6 +268,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202108020456507_InitialMigration.resx">
       <DependentUpon>202108020456507_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202108030039525_AddedRatings.resx">
+      <DependentUpon>202108030039525_AddedRatings.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
